// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput renders - error, not touched yet 1`] = `
<Styled(ViewNB)>
  <Styled(Item)
    error={false}
    inlineLabel={true}
  >
    <Styled(Label)
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      thisField
      :
    </Styled(Label)>
    <Styled(Input)
      autoCapitalize="none"
      keyboardType={null}
      maxLength={null}
      numberOfLines={null}
      secureTextEntry={true}
    />
    <Styled(Button)
      onPress={[Function]}
      transparent={true}
    >
      <Styled(Icon)
        name="eye"
        style={
          Object {
            "color": "grey",
            "fontSize": 32,
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      />
    </Styled(Button)>
  </Styled(Item)>
  <Styled(ViewNB)>
    <Styled(Text)
      style={
        Object {
          "color": "red",
          "fontSize": 14,
          "paddingLeft": 4,
          "paddingTop": 2,
        }
      }
    />
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;

exports[`FormInput renders - errors, touched 1`] = `
<Styled(ViewNB)>
  <Styled(Item)
    error={true}
    inlineLabel={true}
  >
    <Styled(Label)
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      thisField
      :
    </Styled(Label)>
    <Styled(Input)
      autoCapitalize="none"
      keyboardType={null}
      maxLength={null}
      numberOfLines={null}
      secureTextEntry={true}
    />
    <Styled(Icon)
      name="alert"
    />
    <Styled(Button)
      onPress={[Function]}
      transparent={true}
    >
      <Styled(Icon)
        name="eye"
        style={
          Object {
            "color": "grey",
            "fontSize": 32,
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      />
    </Styled(Button)>
  </Styled(Item)>
  <Styled(ViewNB)>
    <Styled(Text)
      style={
        Object {
          "color": "red",
          "fontSize": 14,
          "paddingLeft": 4,
          "paddingTop": 2,
        }
      }
    >
      Enter a valid email address.
    </Styled(Text)>
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;
